Correcting alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -1514,14 +1514,14 @@ label {
   }
 
   .thumbnail {
-    height: 150px;
+    height: 100px;
     border-width: 3px;
     border-radius: 0;
     border-color: #ddd;
   }
     .thumbnail img {
       position: relative;
-      top: 35%;
+      top: 30%;
       margin-top: -15px;
 
       -webkit-transition: .3s;
@@ -2226,6 +2226,6 @@ label {
     background: #990000; 
     width: 100%; 
     height:100%; 
-    padding: 25% 20%; 
+    padding: 12% 20%; 
     text-align: center;
   }
